@@ -1,25 +1,15 @@
 package containers;
 import java.util.*;
 
-import net.mindview.util.RandomGenerator;
 
-interface MySortedSet<E> extends Set<E> {
-	Comparator<? super E> comparator();
-	E first();
-	MySortedSet<E> headSet(E toElement);
-	E last();
-	MySortedSet<E> subSet(E fromElement, E toElement);
-	MySortedSet<E> tailSet(E fromElement);
-}
-
-class MySortedSetImpl<T> implements MySortedSet<T> {
-    private final LinkedList<T> list;
-    public MySortedSetImpl() { 
+class CustomSortedSet<T> implements SortedSet<T> {
+    private final List<T> list;
+    public CustomSortedSet() { 
     	list = new LinkedList<T>(); 
-    	list.sort(null);
     }
-    public MySortedSetImpl(List<T> list2) {
-    	this.list = (LinkedList<T>) list2;
+    public CustomSortedSet(List<T> list) {
+    	this.list = list;
+    	this.list.sort(null);
     }
 	@Override
 	public int size() {
@@ -64,9 +54,8 @@ class MySortedSetImpl<T> implements MySortedSet<T> {
 		checkForNull(e);
 		// 查找插入位置
 		int ip = Collections.binarySearch((List<Comparable<T>>)list, e);
-		checkForValidIndex(ip);
 		if(ip < 0) {   // 当ip值小于0，则表示list集合中没有该元素
-			ip = -ip - 1;  // (-（insertion point） - 1)，即为插入位置
+			ip = -ip - 1;  // (-(insertion point) - 1)，即为插入位置
 			if(ip == list.size())
 				list.add(e);
 			else
@@ -131,38 +120,38 @@ class MySortedSetImpl<T> implements MySortedSet<T> {
 	}
 
 	@Override
-	public MySortedSet<T> subSet(T fromElement, T toElement) {
+	public CustomSortedSet<T> subSet(T fromElement, T toElement) {
 		// TODO Auto-generated method stub
 		int fromIndex = list.indexOf(fromElement);
 		int toIndex = list.indexOf(toElement);
 		checkForValidIndex(fromIndex);
 		checkForValidIndex(toIndex);
 		try {
-		    return new MySortedSetImpl<T>(list.subList(fromIndex, toIndex));
+		    return new CustomSortedSet<T>(list.subList(fromIndex, toIndex));
 		} catch(IndexOutOfBoundsException e) {
 			throw new IllegalArgumentException(e);
 		}
 	}
 
 	@Override
-	public MySortedSet<T> headSet(T toElement) {
+	public CustomSortedSet<T> headSet(T toElement) {
 		// TODO Auto-generated method stub
 		int toIndex = list.indexOf(toElement);
 		checkForValidIndex(toIndex);
 		try {
-		    return new MySortedSetImpl<T>(list.subList(0, toIndex));
+		    return new CustomSortedSet<T>(list.subList(0, toIndex));
 		} catch(IndexOutOfBoundsException e) {
 			throw new IllegalArgumentException(e);
 		}
 	}
 
 	@Override
-	public MySortedSet<T> tailSet(T fromElement) {
+	public CustomSortedSet<T> tailSet(T fromElement) {
 		// TODO Auto-generated method stub
 		int fromIndex = list.indexOf(fromElement);
 		checkForValidIndex(fromIndex);
 		try {
-		    return new MySortedSetImpl<T>(list.subList(fromIndex, list.size()));
+		    return new CustomSortedSet<T>(list.subList(fromIndex, list.size()));
 		} catch(IndexOutOfBoundsException e) {
 			throw new IllegalArgumentException(e);
 		}
@@ -171,13 +160,21 @@ class MySortedSetImpl<T> implements MySortedSet<T> {
 	@Override
 	public T first() {
 		// TODO Auto-generated method stub
-		return list.getFirst();
+		try {
+		    return list.get(0);
+		} catch(IndexOutOfBoundsException e) {
+			throw new NoSuchElementException();
+		}
 	}
 
 	@Override
 	public T last() {
 		// TODO Auto-generated method stub
-		return list.getLast();
+		try {
+		    return list.get(list.size() - 1);
+		} catch(IndexOutOfBoundsException e) {
+			throw new NoSuchElementException();
+		}
 	}
 	public String toString() { return list.toString(); }
 	private void checkForValidIndex(int index) {
@@ -195,17 +192,42 @@ class MySortedSetImpl<T> implements MySortedSet<T> {
 	}
 }
 
-public class Ex10_MySortedSet {
+public class Ex10_CustomSortedSet {
 
 	public static void main(String[] args) {
 		// TODO Auto-generated method stub
-        RandomGenerator.String gen = new RandomGenerator.String();
-        List<String> list = new LinkedList<String>();
-        for(int i = 0; i < 10; i++)
-        	list.add(gen.next());
-        System.out.println("LinkedList:" + list);
-        MySortedSet<String> sortedSet = new MySortedSetImpl<String>(list);
-        System.out.println("MySortedSet:" + sortedSet);
+		System.out.println("Used non-argument constructors:");
+		SortedSet<String> sortedSet = new CustomSortedSet<String>();
+		Collections.addAll(sortedSet, ("One Two Three Four Five Six Seven Eight Nine Ten").split(" "));
+        System.out.println(sortedSet);
+        sortedSet.add("Eleven");
+        System.out.println("add \"Eleven\":" + sortedSet);
+        sortedSet.add("Twelve");
+        System.out.println("add \"Twelve\":" + sortedSet);
+        System.out.println("first():" + sortedSet.first());
+        System.out.println("last():" + sortedSet.last());
+        System.out.println("subSet(\"Eleven\", \"One\"):" + 
+            sortedSet.subSet("Eleven", "One"));
+        System.out.println("headSet(\"Nine\")" + sortedSet.headSet("Nine"));
+        System.out.println("tailSet(\"Six\")" + sortedSet.tailSet("Six"));
+        List<String> subList = Arrays.asList(("One Two Three Four").split(" "));
+        System.out.println("Used iterator output:");
+        for(Iterator<String> it = sortedSet.iterator(); it.hasNext();)
+        	System.out.println(it.next());
+        System.out.println("containAll():" + sortedSet.containsAll(subList));
+        System.out.println("retainAll():" + sortedSet.retainAll(subList));
+         
+        System.out.println("========================================");
+        System.out.println("Used argument constructors:");
+        List<String> list2 = new LinkedList<String>(Countries.names(10));
+        Collections.shuffle(list2);
+        System.out.println("Non-order: " + list2);
+        SortedSet<String> sortedSet2 = new CustomSortedSet<String>(list2);
+        System.out.println("order: " + sortedSet2);
+        // The checkForNullElement() method will throw NullPointerException exception, 
+        // if you add a set containing NULL elements.
+        List<String> list = Arrays.asList(null, null, null);
+        sortedSet.addAll(list);
 	}
 
 }
